Updating the Jupyter Notebook for 02

--- a/02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.ipynb
+++ b/02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "The following block _flattens_ the dataset. It is not the perfect approach, but this way, we can use standard Python numerical tools (Pandas, GeoPandas and Numpy) for mangling the set.\n",
     "\n",
-    "Note: It takes a long time to perform the iterations and 100+ GB memory"
+    "Note: It takes a long time (2hrs) to perform the iterations and 100+ GB virtual memory allocated"
    ]
   },
   {
@@ -307,39 +307,72 @@
     "temp_max = 22.0\n",
     "viticultural_zone['is_in_temp_range'] = viticultural_zone['air_temp'].between(temp_min, temp_max, inclusive='both')\n",
     "\n",
-    "#yearly['IsBetween10and20'] = yearly.between(10.0, 20.0, inclusive=\"both\")\n",
-    "#yearly['test'] = 1\n",
-    "\n",
     "# We will work only on data that is within the temperature range se\n",
     "in_range = viticultural_zone[viticultural_zone['is_in_temp_range'] == True]\n",
-    "\n",
-    "\n",
-    "#in_range[(in_range['lon'] > 180)]['lon'] - 360\n",
-    "\n",
-    "#in_range['lon'] = in_range[(in_range['lon'] > 180)]['lon'] - 360\n",
-    "\n",
-    "#temp = in_range.loc[1900]\n",
-    "#temp['lon2'] = temp[ temp['lon'] > 180 ]\n",
-    "\n",
-    "#temp['lon_fix'] = \n",
-    "#temp.where(temp.lon <= 180, temp * 2, inplace=True)\n",
     "\n",
     "in_range.info()\n",
     "\n",
     "# Fixing the longitudes, our normal range should be between -180 and 180 degrees\n",
     "in_range.loc[ in_range.lon > 180, 'lon' ] = in_range.lon - 360.0 \n",
-    "#temp.where(temp.lon <= 180, temp.lon, inplace=True, axis=0)\n",
     "\n",
     "# Indexing the dataframe along the years\n",
     "in_range.set_index('year', inplace=True)\n",
     "\n",
     "# Let' sse how it looks\n",
-    "print(in_range)\n",
+    "print(in_range)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Building yearly GeoJSON files\n",
     "\n",
-    "#in_range['lon2'] = in_range.loc[1900][in_range.loc[1900]['lon'] > 180] - 360\n",
-    "#in_range.sample(10)\n",
-    "#[(in_range['lon'] > 180)]['lon'] - 360\n",
-    "#yearly_in_range['1900']"
+    "The following block is used to build and store the yearly dataset used by our website. Format is GeoJSON, for speeing things up, we are building it by hand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "\n",
+    "for year in range(1900, 2018):\n",
+    "\n",
+    "    data = json.loads(in_range.loc[year].reset_index().to_json(orient=\"records\"))\n",
+    "\n",
+    "    geojson = {\n",
+    "        \"type\": \"FeatureCollection\",\n",
+    "        \"features\": [\n",
+    "        {\n",
+    "            \"type\": \"Feature\",\n",
+    "            \"geometry\" : {\n",
+    "                \"type\": \"Point\",\n",
+    "                \"coordinates\": [d[\"lon\"], d[\"lat\"]],\n",
+    "                },\n",
+    "            \"properties\" : {\n",
+    "                \"year\": d[\"year\"],\n",
+    "                \"air_temp\": round(d[\"air_temp\"],2) ,\n",
+    "                \"in_range\": d[\"is_in_temp_range\"]\n",
+    "            }\n",
+    "        } for d in data]\n",
+    "    }\n",
+    "\n",
+    "    with open(f\"noaa_data/web_data/viticultural_zone_mean_temp_{year}.geojson\", 'w') as json_file:\n",
+    "        json.dump(geojson, json_file)\n",
+    "\n",
+    "#print(json.dumps(geojson, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Initial plots using Python\n",
+    "The following blocks are used to generate some images for selected years (1900 ad 2010) and to create a GIF animation that can be shown even on a static page."
    ]
   },
   {
@@ -506,49 +539,6 @@
     "        file_path = os.path.join(png_dir, file_name)\n",
     "        images.append(imageio.imread(file_path))\n",
     "imageio.mimsave('images/900-2017.gif', images, fps=5)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following block is used to build and store the yearly dataset used by our website. Format is GeoJSON, for speeing things up, we are building it by hand."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "\n",
-    "for year in range(1900, 2018):\n",
-    "\n",
-    "    data = json.loads(in_range.loc[year].reset_index().to_json(orient=\"records\"))\n",
-    "\n",
-    "    geojson = {\n",
-    "        \"type\": \"FeatureCollection\",\n",
-    "        \"features\": [\n",
-    "        {\n",
-    "            \"type\": \"Feature\",\n",
-    "            \"geometry\" : {\n",
-    "                \"type\": \"Point\",\n",
-    "                \"coordinates\": [d[\"lon\"], d[\"lat\"]],\n",
-    "                },\n",
-    "            \"properties\" : {\n",
-    "                \"year\": d[\"year\"],\n",
-    "                \"air_temp\": round(d[\"air_temp\"],2) ,\n",
-    "                \"in_range\": d[\"is_in_temp_range\"]\n",
-    "            }\n",
-    "        } for d in data]\n",
-    "    }\n",
-    "\n",
-    "    with open(f\"noaa_data/web_data/viticultural_zone_mean_temp_{year}.geojson\", 'w') as json_file:\n",
-    "        json.dump(geojson, json_file)\n",
-    "\n",
-    "#print(json.dumps(geojson, indent=4))\n"
    ]
   }
  ],
